src/main/java/com/example/demo/Dto/Error/Response/OverAmountCustomerResponse.java
package com.example.demo.Dto.Error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class OverAmountCustomerResponse {
    private String code;
    private String message;
}
